<resources>
    <string name="app_name">Muse Asia</string>
    <string name="anime">ANIME</string>
    <string name="the_day_i_got_reincarnated_s_a_slime">The day I got reincarnated s a slime</string>
    <string name="button">Button</string>
    <string name="button2">Button2</string>
    <string name="the_god_of_hihg_school">The God of Hihg School</string>
    <string name="episode__1">Episode 1</string>
    <string name="the_god_of_high_school">The God of High School</string>
    <string name="episode___1">Episode 1</string>
    <string name="that_time_i_got_reincarnated_as_a_slime_">That Time I Got Reincarnated as a Slime</string>
    <string name="episode2">Episode 2</string>
    <string name="that_time_i_got_reincarnated_as_a_slime">That Time I Got Reincarnated as a Slime</string>
    <string name="the_god_of_high_school_">The God of High School</string>
    <string name="episode_3">Episode 3</string>
    <string name="episode_4">Episode 4</string>
    <string name="episode_5">Episode 5</string>
    <string name="episode_1">Episode 1</string>
    <string name="watch_">WATCH</string>
    <string name="watch">WATCH</string>
    <string name="episode_2">Episode 2</string>
</resources>