<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/gohs1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="204dp"
        android:text="@string/episode_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gohs2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/episode_2"
        app:layout_constraintEnd_toStartOf="@+id/gohs3"
        app:layout_constraintTop_toTopOf="@+id/gohs1" />

    <Button
        android:id="@+id/gohs3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/episode_3"
        app:layout_constraintBaseline_toBaselineOf="@+id/gohs2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/gohs4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:text="@string/episode_4"
        app:layout_constraintBaseline_toBaselineOf="@+id/gohs5"
        app:layout_constraintStart_toStartOf="@+id/gohs1" />

    <Button
        android:id="@+id/gohs5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/episode_5"
        app:layout_constraintStart_toStartOf="@+id/gohs2"
        app:layout_constraintTop_toBottomOf="@+id/gohs2" />
</androidx.constraintlayout.widget.ConstraintLayout>