<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/e1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:cursorVisible="false"
        android:text="@string/episode_1"
        app:layout_constraintBaseline_toBaselineOf="@+id/e2"
        app:layout_constraintEnd_toStartOf="@+id/e2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/e2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/episode_2"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/e3"
        app:layout_constraintStart_toEndOf="@+id/e1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/e3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/episode_3"
        app:layout_constraintBaseline_toBaselineOf="@+id/e2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/e2" />

    <Button
        android:id="@+id/e4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episode_4"
        app:layout_constraintBaseline_toBaselineOf="@+id/e5"
        app:layout_constraintStart_toStartOf="@+id/e1" />

    <Button
        android:id="@+id/e5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/episode_5"
        app:layout_constraintStart_toStartOf="@+id/e2"
        app:layout_constraintTop_toBottomOf="@+id/e2" />
</androidx.constraintlayout.widget.ConstraintLayout>